09/03/2014  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Removed COPYING file (had nothing to do w/ this project)
	* Failure to add entries when db didn't exist fixed

05/01/2014  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Created file with known bugs
	* Added 2014 to copyright notices

07/09/2013  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Added email field
	* Added option to search entries by email
	* Added (not) required fields

06/09/2013  Guillermo Gómez <guillermo.gf@openmailbox.org>
	* Changelog created. Last stable version 0.2
	* Date is DD/MM/YYYY (Day/Month/Year)